--- a/public/css/app.css
+++ b/public/css/app.css
@@ -473,9 +473,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
   margin-right: auto;
 }
-.mr-5 {
-  margin-right: 1.25rem;
-}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -503,6 +500,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-mt-px {
   margin-top: -1px;
 }
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
@@ -524,6 +524,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-16 {
   height: 4rem;
 }
+.h-10 {
+  height: 2.5rem;
+}
+.h-9 {
+  height: 2.25rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -538,6 +544,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-auto {
   width: auto;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-screen {
+  width: 100vw;
+}
+.w-96 {
+  width: 24rem;
+}
+.w-9 {
+  width: 2.25rem;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -557,8 +575,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col {
   flex-direction: column;
 }
+.items-end {
+  align-items: flex-end;
+}
 .items-center {
   align-items: center;
+}
+.justify-end {
+  justify-content: flex-end;
 }
 .justify-center {
   justify-content: center;
@@ -590,13 +614,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
 }
 .p-6 {
   padding: 1.5rem;
@@ -623,8 +647,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-8 {
   padding-top: 2rem;
 }
+.pr-4 {
+  padding-right: 1rem;
+}
 .text-center {
   text-align: center;
+}
+.align-bottom {
+  vertical-align: bottom;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -638,6 +668,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.font-bold {
+  font-weight: 700;
+}
 .font-semibold {
   font-weight: 600;
 }
@@ -650,9 +683,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .tracking-wider {
   letter-spacing: 0.05em;
 }
-.text-white {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(25 25 25 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -699,6 +732,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   content: var(--tw-content);
   display: block;
 }
+.after\:h-1\.5::after {
+  content: var(--tw-content);
+  height: 0.375rem;
+}
 .after\:h-1::after {
   content: var(--tw-content);
   height: 0.25rem;
@@ -707,14 +744,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   content: var(--tw-content);
   width: 0px;
 }
-.after\:bg-white::after {
+.after\:bg-black::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
 }
 .after\:content-\[\'\'\]::after {
   --tw-content: '';
   content: var(--tw-content);
+}
+.hover\:block:hover {
+  display: block;
+}
+.hover\:hidden:hover {
+  display: none;
+}
+.hover\:text-green:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 191 165 / var(--tw-text-opacity));
 }
 .hover\:after\:w-full:hover::after {
   content: var(--tw-content);
@@ -776,8 +823,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     flex-direction: row;
   }
 
+  .lg\:items-end {
+    align-items: flex-end;
+  }
+
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:justify-start {
+    justify-content: flex-start;
   }
 
   .lg\:justify-end {
@@ -800,5 +855,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .lg\:pr-12 {
+    padding-right: 3rem;
+  }
+
+  .lg\:align-bottom {
+    vertical-align: bottom;
   }
 }
