--- a/public/css/app.css
+++ b/public/css/app.css
@@ -661,9 +661,6 @@ select {
 .-z-10 {
   z-index: -10;
 }
-.col-auto {
-  grid-column: auto;
-}
 .m-0 {
   margin: 0px;
 }
@@ -741,6 +738,9 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -752,12 +752,6 @@ select {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.mr-4 {
-  margin-right: 1rem;
-}
-.mb-0 {
-  margin-bottom: 0px;
 }
 .block {
   display: block;
@@ -815,6 +809,9 @@ select {
 }
 .h-7 {
   height: 1.75rem;
+}
+.h-45vh {
+  height: 45vh;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -969,17 +966,8 @@ select {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-.grid-rows-4 {
-  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -1017,11 +1005,6 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-.divide-y > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 .overflow-auto {
   overflow: auto;
@@ -1207,6 +1190,9 @@ select {
 .bg-top {
   background-position: top;
 }
+.bg-center {
+  background-position: center;
+}
 .fill-current {
   fill: currentColor;
 }
@@ -1222,9 +1208,6 @@ select {
 }
 .p-5 {
   padding: 1.25rem;
-}
-.p-4 {
-  padding: 1rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1323,9 +1306,6 @@ select {
 }
 .pt-1 {
   padding-top: 0.25rem;
-}
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 .text-left {
   text-align: left;
@@ -1711,6 +1691,9 @@ select {
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.hover\:bg-opacity-95:hover {
+  --tw-bg-opacity: 0.95;
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -2107,12 +2090,12 @@ select {
     margin-left: 1rem;
   }
 
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:mb-6 {
     margin-bottom: 1.5rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .lg\:flex {
@@ -2129,10 +2112,6 @@ select {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2162,14 +2141,6 @@ select {
 
   .lg\:pr-12 {
     padding-right: 3rem;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .lg\:pb-6 {
-    padding-bottom: 1.5rem;
   }
 
   .lg\:pb-2 {
