--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,3 +13,19 @@
     height: 40px;
     transition: all 0.2s linear;
 }
+
+@keyframes anim {
+    0% {
+      display: none;
+      opacity: 0;
+    }
+    1% {
+      display: block;
+      opacity: 0;
+      transform: scale(0);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
