--- a/public/css/app.css
+++ b/public/css/app.css
@@ -856,11 +856,14 @@ select {
 .h-8 {
   height: 2rem;
 }
-.h-90 {
-  height: 22rem;
+.h-80 {
+  height: 20rem;
 }
 .h-45vh {
   height: 45vh;
+}
+.h-90 {
+  height: 22rem;
 }
 .h-14 {
   height: 3.5rem;
@@ -870,9 +873,6 @@ select {
 }
 .h-7 {
   height: 1.75rem;
-}
-.h-80 {
-  height: 20rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -904,8 +904,8 @@ select {
 .w-1\/3 {
   width: 33.333333%;
 }
-.w-43rem {
-  width: 43rem;
+.w-45rem {
+  width: 45rem;
 }
 .w-10\/12 {
   width: 83.333333%;
@@ -1281,16 +1281,16 @@ select {
 .bg-genres {
   background-image: url('/img/back.png');
 }
-.bg-drstone {
+.bg-drstonesuggest {
   background-image: url('/img/drstonesuggest.jpg');
 }
-.bg-opm {
+.bg-opmsuggest {
   background-image: url('/img/opmsuggest.jpg');
 }
-.bg-tpn {
+.bg-tpnsuggest {
   background-image: url('/img/tpnsuggest.jpg');
 }
-.bg-dbz {
+.bg-dbzsuggest {
   background-image: url('/img/dbzsuggest.jpg');
 }
 .bg-snk {
