--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1437,6 +1437,10 @@ select {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -1448,6 +1452,10 @@ select {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+.px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1964,6 +1972,10 @@ select {
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(25 25 25 / var(--tw-text-opacity));
 }
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
